# meson-bug-report-windows-strip

./: .gitignore  meson.build  pyproject.toml
wintest/: foo.pxd  foo.pyx  meson.build  test.py
